NATTQA-ENV/force-app/main/default/objects/NATT_Case_Product__c/NATT_Case_Product__c.object-meta.xml
<CustomObject>
    <description>To reference products on a Case.  Note:  The Case - Order should be used when that product is part of an order.</description>
    <label>Case - Product</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Case - Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case - Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>