NATTQA-ENV/force-app/main/default/objects/NATT_Case_Product__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case - Products</relationshipLabel>
    <relationshipName>Case_Products</relationshipName>
    <type>Lookup</type>
</CustomField>