NATTQA-ENV/force-app/main/default/objects/NATT_Case_Product__c/fields/NATT_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Part_Number__c</fullName>
    <inlineHelpText>If the product does not exist in the Carrier catalog please type in the product number here.</inlineHelpText>
    <label>Part Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>