NATTQA-ENV/force-app/main/default/objects/NATT_Case_Product__c/fields/NATT_Product__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field for all products currently in the Carrier Catalog</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Case - Products</relationshipLabel>
    <relationshipName>Case_Products</relationshipName>
    <type>Lookup</type>
</CustomField>