NATTQA-ENV/force-app/main/default/objects/NATT_Case_Product__c/fields/NATT_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Description__c</fullName>
    <inlineHelpText>For products not in the Carrier catalog additional description can be added here.</inlineHelpText>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>